# Potensio-CE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  compile_commands.json
resources/: RCa07560  app.rc  resource.h
src/: main.cpp
src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h  MouseTracker.h  SystemTray.cpp  SystemTray.h
src/core/: Logger.cpp  Logger.h  Notify.cpp  Notify.h  Utils.cpp  Utils.h
src/core/Clipboard/: ClipboardManager.cpp  ClipboardManager.h
src/core/Database/: DatabaseManager.cpp  DatabaseManager.h  KanbanDatabase.cpp  KanbanDatabase.h  PomodoroDatabase.cpp  PomodoroDatabase.h
src/core/FileConverter/: FileConverter.cpp  FileConverter.h
src/core/Kanban/: KanbanManager.cpp  KanbanManager.h
src/core/Timer/: Messages.h  PomodoroTimer.cpp  PomodoroTimer.h
src/core/Todo/: TodoManager.cpp  TodoManager.h
src/platform/windows/: WindowsHooks.cpp  WindowsHooks.h  WindowsUtils.cpp  WindowsUtils.h
src/ui/: FileDropTarget.h  UIManager.cpp  UIManager.h
src/ui/Components/: Sidebar.cpp  Sidebar.h
src/ui/Windows/: ClipboardWindow.cpp  ClipboardWindow.h  KanbanWindow.cpp  KanbanWindow.h  MainWindow.cpp  MainWindow.h  PomodoroWindow.cpp  PomodoroWindow.h  SettingsWindow.cpp  SettingsWindow.h
